# ExtractChessboardFromRGBD

./: CMakeLists.txt  README.md  ROIExtract.cpp  ROIExtract.h  main.cpp  rs-cfg.json
data/: chessboard_corner_detection.ipynb
